# zelda-AStar

./: .gitignore  README.md  pyproject.toml
zelda_astar/: algorithms.py  astar.py  colors.py  dunger.txt  main.py  map.py  mapa.py  mapa_principal.txt  spot.py  teste.py  visualization.py  xablau.py
